# neurips-abstracts

./: .env.example  .gitignore  .instructions.md  README.md  demo_search_with_authors.py  extract_subset.py  inspect_data.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/instructions/: project.instructions.md
.github/workflows/: tests.yml
changelog/: .instructions.md  01_SUMMARY.md  02_AUTHORS_TABLE_IMPLEMENTATION.md  03_PACKAGE_STATUS.md  04_SCHEMA_UPDATE_INTEGER_IDS.md  05_TEST_SUITE_CLEANUP.md  06_SCHEMA_CHANGES_SUMMARY.md  07_SCHEMA_MIGRATION.md  08_BACKWARD_COMPATIBILITY_REMOVED.md  09_FINAL_STATUS.md  108_OPTIONAL_DEPENDENCIES_FIX.md  10_NEURIPS_2025_VERIFICATION.md  111_CODE_DEDUPLICATION_CONFERENCE_DOWNLOADERS.md  114_ML4PS_AUTHOR_EXTRACTION_FIX.md  115_PYTHON_VERSION_REQUIREMENT_UPDATE.md  116_LIGHTWEIGHT_SCHEMA_MIGRATION.md  117_TEST_SUITE_MIGRATION.md  118_JSON_CONFERENCE_DOWNLOADER_SCHEMA_CONVERSION.md  119_DATABASE_REFACTOR_MODULAR_METHODS.md  11_NEW_INTEGRATION_TEST.md  120_LOAD_JSON_DATA_REMOVAL.md  121_DECISION_NONE_FIX.md  122_EMBEDDINGS_UID_COLUMN_FIX.md  123_SKIP_EXISTING_EMBEDDINGS.md  12_CACHING_FEATURE.md  13_CACHING_SUMMARY.md  14_EMBEDDINGS_MODULE.md  15_EMBEDDINGS_FEATURE_SUMMARY.md  16_EMBEDDINGS_QUICK_REFERENCE.md  17_CLI_MODULE_SUMMARY.md  18_PROGRESS_BAR_IMPLEMENTATION.md  19_SEARCH_COMMAND_IMPLEMENTATION.md  20_CLI_REFERENCE.md  21_SEARCH_ENHANCEMENT_COMPLETE.md  22_SEARCH_ENHANCEMENTS.md  23_TEST_COVERAGE_IMPROVEMENT.md  24_RAG_CHAT_DOCUMENTATION.md  25_RAG_CHAT_IMPLEMENTATION.md  26_CONFIGURATION.md  27_CONFIGURATION_IMPLEMENTATION.md  (+43 more)
docs/: .gitignore  README.md  changelog.md  cli_reference.md  conf.py  configuration.md  contributing.md  index.md  installation.md  plugins.md  usage.md
docs/api/: config.md  database.md  downloader.md  embeddings.md  modules.md  rag.md
examples/: add_missing_metadata.py  advanced_usage.py  authors_demo.py  basic_usage.py  embeddings_demo.py  rag_chat_demo.py
scripts/: migrate_to_lightweight_schema.py
src/neurips_abstracts/: __init__.py  cli.py  config.py  database.py  downloader.py  embeddings.py  paper_utils.py  plugin.py  rag.py
src/neurips_abstracts/plugins/: __init__.py  iclr_downloader.py  icml_downloader.py  json_conference_downloader.py  ml4ps_downloader.py  neurips_downloader.py
src/neurips_abstracts/web_ui/: README.md  __init__.py  app.py
src/neurips_abstracts/web_ui/static/: app.js  style.css
src/neurips_abstracts/web_ui/templates/: index.html
src/neurips_abstracts/web_ui/tests/: app.test.js
tests/: __init__.py  conftest.py  test_authors.py  test_chromadb_metadata.py  test_cli.py  test_config.py  test_database.py  test_download_update_feature.py  test_downloader.py  test_embeddings.py  test_helpers.py  test_integration.py  test_paper_utils.py  test_plugin_helpers.py  test_plugin_year_conference.py  test_plugins_iclr.py  test_plugins_ml4ps.py  test_plugins_models.py  test_pydantic_validation.py  test_rag.py  test_web.py  test_web_e2e.py  test_web_integration.py  test_web_ui_unit.py
webui/: README.md  app.py
webui/static/: app.js  style.css
webui/templates/: index.html
webui/tests/: README.md  app.test.js  setup.js
