[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "neurips-abstracts"
dynamic = ["version"]
description = "A package to download NeurIPS conference data and load it into a SQLite database"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["neurips", "database", "sqlite", "conference"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
    "chromadb>=0.4.0",
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "selenium>=4.0.0",
    "webdriver-manager>=4.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "linkify-it-py>=2.0.0",
]
web = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/neurips-abstracts"
Documentation = "https://neurips-abstracts.readthedocs.io"
Repository = "https://github.com/yourusername/neurips-abstracts.git"
Issues = "https://github.com/yourusername/neurips-abstracts/issues"

[project.scripts]
neurips-abstracts = "neurips_abstracts.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/neurips_abstracts/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/neurips_abstracts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselected by default)",
    "integration: marks tests as integration tests (require real data)",
    "e2e: marks tests as end-to-end tests (require browser automation)",
]
addopts = [
    "--verbose",
    "--cov=neurips_abstracts",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-m not slow",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
